--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: allburov
   instagram:
-  linkedin: 
+  linkedin:  https://ru.linkedin.com/in/aleksey-burov-99b06164
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
