--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: allburov
 
 # Short bio or description (displayed in the header)
-description: 
+description: Who are all these people?
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/4376814
