--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ footer-links:
   flickr:
   github: allburov
   instagram:
+  habrahabr: allburov
   linkedin:  aleksey-burov-99b06164
   pinterest:
   rss: # just type anything here for a working RSS icon
