--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 excerpt_separator: <!--more-->
 
 # Name of your site (displayed in the header)
-name: allburov
+name: <AB/>
 
 # Short bio or description (displayed in the header)
-description: Who are all these people?
+description: Разработка, Автоматизация, Интеграция
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/4376814
