--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 excerpt_separator: <!--more-->
 
 # Name of your site (displayed in the header)
-name: <AB/>
+name: "<AB/>"
 
 # Short bio or description (displayed in the header)
 description: Разработка, Автоматизация, Интеграция
