--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: '&lt;AB/&gt;'
 description: Разработка, Автоматизация, Интеграция
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-#avatar: https://avatars0.githubusercontent.com/u/4376814
+avatar: https://avatars0.githubusercontent.com/u/4376814
 
 #
 # Flags below are optional
